--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,11 @@
 <resources>
     <string name="app_name">RootLink</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="sign_logo">管理您的智能硬件</string>
+    <string name="sign_username">用户名</string>
+    <string name="sign_password">密码</string>
+    <string name="sign_password_again">重复密码</string>
+    <string name="register">注册账号</string>
+    <string name="login">登陆</string>
+    <string name="remember_password">记住密码</string>
 
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
 </resources>
